<resources>
    <string name="app_name">Guftagu</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="we_will_send_an_sms_to_verify_it_s_your_number">We will send an SMS to verify it is your number</string>
    <string name="phone">Phone</string>
    <string name="send_otp">SEND OTP</string>
    <string name="verify_your_phone">Verify Your Phone Number</string>
    <string name="enter_the_otp_sent_to_your_number">Enter the OTP sent to your number</string>
    <string name="verify">Verify</string>
    <string name="did_not_receive_sms">Did not Receive SMS?</string>
    <string name="username">Username</string>
    <string name="next">NEXT</string>
    <string name="_91xxxxxxxxxx">+91xxxxxxxxxx</string>
    <string name="logout">Logout</string>
    <string name="create_profile">Create Profile</string>
    <string name="check_number">Check Number</string>
    <string name="did_not_received_code">Did not received code?</string>
    <string name="name">Name</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="people_can_search_you_on_guftagu_using_these_details">People can search you on Guftagu using these details</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="messages_page">MESSAGES PAGE</string>
    <string name="friends_page">Friends Page</string>
    <string name="requests_page">Requests Page</string>
    <string name="last_message">Last Message</string>
    <string name="default_time">12:00 AM</string>
    <string name="online">online</string>
    <string name="status">Status</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_username">Edit Username</string>
    <string name="search_user">Search user by name, username or phone</string>
    <string name="add_friend">Add friend</string>
    <string name="decline_request">Decline Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="cancel_request">cancel request</string>
    <string name="type_a_message">Type a Message</string>
    <string name="default_date_time">DD/MM/YYYY 00:00 AM</string>
    <string name="delivered">delivered</string>
    <string name="default_date">00/00/00</string>
    <string name="count">1</string>
</resources>