<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/messageLayout"
    android:padding="10dp">

        <TextView
            android:id="@+id/chatMessage"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:maxWidth="310dp"
            android:background="@drawable/bg_receiver"/>

        <TextView
            android:id="@+id/chatMessageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date_time"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"/>

    <TextView
        android:id="@+id/chatSeenStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivered"
        android:gravity="end"
        android:visibility="gone"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        />

</LinearLayout>
