<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chatList_profileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chatList_user_online"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/circle_offline"
        app:layout_constraintBottom_toBottomOf="@+id/chatList_profileImage"
        app:layout_constraintEnd_toEndOf="@+id/chatList_profileImage"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/chatList_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/chatList_profileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chatList_user_lastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/last_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chatList_profileImage"
        app:layout_constraintTop_toBottomOf="@+id/chatList_userName" />

    <TextView
        android:id="@+id/chat_list_message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:text="@string/default_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/chatList_message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/default_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_list_message_date" />

    <TextView
        android:id="@+id/chatList_unreadMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/unread_messages_count_background"
        app:layout_constraintEnd_toStartOf="@+id/chat_list_message_date"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/count"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>