<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Edit Status"
        android:textColor="@color/white"
        android:background="@drawable/title_background"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogEditProfileStatus"
        android:hint="@string/status"
        android:padding="10dp"
        android:layout_marginTop="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_status_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_primary"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/edit_status_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="30dp"
            android:text="@string/cancel"
            android:textColor="@color/color_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/edit_status_save_button"/>

    </RelativeLayout>
</LinearLayout>