<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:background="@color/color_primary">

    <ImageView
        android:id="@+id/viewprofile_user_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/viewProfile_back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:src="@drawable/back_arrow_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewprofile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:maxWidth="300dp"
        android:text="@string/name"
        android:textColor="@color/color_primary_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewprofile_user_image" />

    <TextView
        android:id="@+id/viewprofile_user_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:maxWidth="300dp"
        android:text="@string/status"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewprofile_user_name" />

    <Button
        android:id="@+id/viewprofile_add_friend_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/color_primary_dark"
        android:text="@string/add_friend"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewprofile_decline_request_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary_dark"
        android:text="@string/decline_request"
        android:textColor="@color/color_primary"
        android:enabled="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewprofile_add_friend_button" />


</androidx.constraintlayout.widget.ConstraintLayout>