<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".ChattingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color_primary_dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_sender_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/avatar"
            android:scaleType="centerCrop"
            app:civ_circle_background_color="@color/color_primary_dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/chat_sender_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/chat_sender_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/chat_send_message_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar" />

    <LinearLayout
        android:id="@+id/chat_send_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/chat_message_box"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/type_a_message"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/chat_send_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_send_24"
            android:background="#00000000"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>