<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/messages_user_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/messages_last_message_time"
        app:layout_constraintTop_toBottomOf="@+id/messages_user_name" />

    <TextView
        android:id="@+id/messages_user_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/messages_user_online"
        app:layout_constraintStart_toEndOf="@+id/messages_user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messages_user_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/online"
        android:textColor="#04EF0F"
        app:layout_constraintBottom_toTopOf="@+id/messages_last_message_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messages_user_last_message"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="jhdfshdfjsdhfsdfhsjdfhsdfhdjhfjhdfjsdhfdfsdhfjdsfhsdhfhdfsdfsdj"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/circleImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/messages_user_image"
        app:layout_constraintTop_toBottomOf="@+id/messages_user_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/messages_last_message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:text="@string/default_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>